// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a disabled checkout button where cart is empty 1`] = `
<MiniBag
  cart={
    Object {
      "lineItems": Array [],
      "totalQuantity": 0,
    }
  }
  dispatch={[Function]}
>
  <div>
    <Link
      href="/cart"
    >
      <a
        aria-label="View your cart"
        href="/cart"
        onClick={[Function]}
      >
        View Your Bag
        <span
          style={
            Object {
              "marginLeft": "5px",
              "marginRight": "5px",
            }
          }
        >
          (
          0
          )
        </span>
      </a>
    </Link>
    <Link
      href=""
    >
      <a
        aria-label="Go to checkout"
        className="o-button o-button--primary o-button--lrg o-button--disabled"
        href=""
        onClick={[Function]}
      >
        CHECKOUT
      </a>
    </Link>
  </div>
</MiniBag>
`;

exports[`renders an active checkout button where cart has items 1`] = `
<MiniBag
  cart={
    Object {
      "lineItems": Array [
        Object {
          "discount": 0,
          "image_url": "",
          "price": 10,
          "productID": 1,
          "productSku": "1231",
          "quantity": 2,
          "size": "size - 8",
          "sku": "123",
          "title": "test",
        },
      ],
      "totalQuantity": 2,
    }
  }
  dispatch={[Function]}
>
  <div>
    <Link
      href="/cart"
    >
      <a
        aria-label="View your cart"
        href="/cart"
        onClick={[Function]}
      >
        View Your Bag
        <span
          style={
            Object {
              "marginLeft": "5px",
              "marginRight": "5px",
            }
          }
        >
          (
          2
          )
        </span>
      </a>
    </Link>
    <Link
      href="/checkout"
    >
      <a
        aria-label="Go to checkout"
        className="o-button o-button--primary o-button--lrg"
        href="/checkout"
        onClick={[Function]}
      >
        CHECKOUT
      </a>
    </Link>
  </div>
</MiniBag>
`;

exports[`renders the minibag links 1`] = `
<div>
  <Link
    href="/cart"
  >
    <a
      aria-label="View your cart"
    >
      View Your Bag
      <span
        style={
          Object {
            "marginLeft": "5px",
            "marginRight": "5px",
          }
        }
      >
        (
        0
        )
      </span>
    </a>
  </Link>
  <Link
    href=""
  >
    <a
      aria-label="Go to checkout"
      className="o-button o-button--primary o-button--lrg o-button--disabled"
    >
      CHECKOUT
    </a>
  </Link>
</div>
`;
